--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>my simple website</title>
 </head>
 <body>
+    <div>
+        <h3>my first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nisi quae velit accusantium facilis eius minima quibusdam ducimus? Incidunt temporibus at nemo similique consequatur possimus molestias quisquam in hic perspiciatis.</p>
+    </div>
     
 </body>
 </html>
