first added blog

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <h3>my first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nisi quae velit accusantium facilis eius minima quibusdam ducimus? Incidunt temporibus at nemo similique consequatur possimus molestias quisquam in hic perspiciatis.</p>
     </div>
+    <div>
+        <h3>my first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nisi quae velit accusantium facilis eius minima quibusdam ducimus? Incidunt temporibus at nemo similique consequatur possimus molestias quisquam in hic perspiciatis.</p>
+    </div>
+    <div>
+        <h3>my first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nisi quae velit accusantium facilis eius minima quibusdam ducimus? Incidunt temporibus at nemo similique consequatur possimus molestias quisquam in hic perspiciatis.</p>
+    </div>
     
 </body>
 </html>
