added first blog

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
         <h3>my first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nisi quae velit accusantium facilis eius minima quibusdam ducimus? Incidunt temporibus at nemo similique consequatur possimus molestias quisquam in hic perspiciatis.</p>
     </div>
+    <div class="git">
+        <h3>how to push incremental code</h3>
+        <h4>always use 3 commed .Given below:</h4>
+        <ol>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+
+        </ol>            
+    </div>
     
 </body>
 </html>
